# templates-nix

./: flake.nix
devenv/: flake.nix
gcp-vm-image/: README.md  configuration.nix  flake.nix
python-poetry/: .envrc  .gitignore  flake.nix
python-uv-app/: .gitignore  flake.nix  package.nix  pyproject.toml
python-uv-lib/: flake.nix  package.nix  pyproject.toml
